--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="jumbotron text-center">
             <h1>Mission to Mars</h1>
-            <p><a class="btn btn-primary btn-lg" href="/scrape"
+            <p><a class="btn btn-danger btn-lg" href="/scrape"
                         role="button">Scrape New Data</a></p>
         </div>
         <!-- Mars News -->
@@ -22,7 +22,7 @@
             <div class="col-md-12">
                 <div class="media">
                     <div class="media-body">
-                        <h2>Latest Mars News</h2>
+                        <h2><strong>Latest Mars News</strong></h2>
                         <h4 class="media-heading">{{mars.news_title}}</h4>
                         <p>{{ mars.news_paragraph }}</p>
                     </div>
@@ -31,8 +31,8 @@
         </div>
         <!-- Featured Image -->
         <div class="row" id="mars-featured-image">
-            <div class="col-md-8">
-                <h2>Featured Mars Image</h2>
+            <div class="col-xs-12 col-md-8">
+                <h2><strong> Mars Image</strong></h2>
                 <img 
                     src="{{ mars.featured_image }}" 
                     class="img-responsive" 
@@ -40,9 +40,9 @@
                 />
             </div>
             <!-- Mars Facts -->
-            <div class="col-md-4">
+            <div class="col-xs-6 col-md-4">
                 <div class="row" id="mars-facts">
-                    <h4>Mars Facts</h4>
+                    <h4><strong>Mars Facts</strong></h4>
                     {{ mars.facts | safe }}
                 </div>
             </div>
@@ -52,11 +52,11 @@
         <!-- Section for Mars Hemispheres -->
       <div class="row" id="mars-hemispheres">
         <div class="page-header">
-          <h2 class="text-center">Mars Hemispheres</h2>
+          <h2 class="text-center"><strong>Mars Hemispheres</strong></h2>
         </div>
 
         {% for hemisphere in mars.hemispheres %}
-        <div class="col-md-6">
+        <div class="col-md-6 col-xs-6">
           <div class="thumbnail">
             <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
             <div class="caption">
